--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>aspectj-maven-plugin</artifactId>
-  <version>1.11.1-SNAPSHOT</version>
+  <version>1.12.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>Mojo's AspectJ Maven Plugin</name>
@@ -20,9 +20,9 @@
   </description>
   <inceptionYear>2005</inceptionYear>
   <properties>
-    <aspectjVersion>1.9.1</aspectjVersion>
+    <aspectjVersion>1.9.4</aspectjVersion>
     <mavenVersion>3.0.5</mavenVersion>
-    <doxiaVersion>1.6</doxiaVersion>
+    <doxiaVersion>1.9</doxiaVersion>
     <mojo.java.target>1.8</mojo.java.target> <!-- aspectJ > 1.8.13 is JDK 1.8 minimum -->
     <!-- work around until it is correctly fixed at top parent -->
     <scmpublish.content>${project.build.directory}/staging/aspectj-maven-plugin</scmpublish.content>
@@ -235,31 +235,6 @@
           </excludes>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-invoker-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>integration-test</id>
-            <goals>
-              <goal>install</goal>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <projectsDirectory>src/it</projectsDirectory>
-          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-          <postBuildHookScript>verify</postBuildHookScript>
-          <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-          <goals>
-            <goal>clean</goal>
-            <goal>test</goal>
-          </goals>
-          <settingsFile>src/it/settings.xml</settingsFile>
-          <debug>true</debug>
-        </configuration>
-      </plugin>
 
       <!--
          Provides PlantUML integration into site deployments.
@@ -389,5 +364,42 @@
         </plugins>
       </build>
     </profile>
+      <profile>
+          <id>integration-test</id>
+          <activation>
+              <activeByDefault>true</activeByDefault>
+          </activation>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-invoker-plugin</artifactId>
+                      <executions>
+                          <execution>
+                              <id>integration-test</id>
+                              <phase>verify</phase>
+                              <goals>
+                                  <goal>verify</goal>
+                                  <goal>run</goal>
+                              </goals>
+                          </execution>
+                      </executions>
+                      <configuration>
+                          <projectsDirectory>src/it</projectsDirectory>
+                          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+                          <postBuildHookScript>verify</postBuildHookScript>
+                          <localRepositoryPath>${project.build.directory}/local-repo
+                          </localRepositoryPath>
+                          <goals>
+                              <goal>clean</goal>
+                              <goal>test</goal>
+                          </goals>
+                          <settingsFile>src/it/settings.xml</settingsFile>
+                          <debug>true</debug>
+                      </configuration>
+                  </plugin>
+              </plugins>
+          </build>
+      </profile>
   </profiles>
 </project>
