--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,8 @@
     </dependency>
     <dependency>
         <groupId>org.apache.maven</groupId>
-        <artifactId>maven-plugin-api</artifactId>
+        <artifactId>maven-plugin
+      </artifactId>
         <version>${mavenVersion}</version>
     </dependency>
     <dependency>
@@ -136,7 +137,7 @@
     <dependency>
         <groupId>org.apache.maven.reporting</groupId>
         <artifactId>maven-reporting-api</artifactId>
-        <version>3.0.0</version>
+        <version>3.1.0</version>
     </dependency>
     <dependency>
         <groupId>org.apache.maven.doxia</groupId>
@@ -151,7 +152,7 @@
     <dependency>
         <groupId>org.apache.maven.reporting</groupId>
         <artifactId>maven-reporting-impl</artifactId>
-        <version>3.1.0</version>
+        <version>3.0.0</version>
     </dependency>
 
     <dependency>
